# shuttle-cch23

./: .env  Cargo.toml  README.md  watch.nu
migrations/: 20231214122351_init.down.sql  20231214122351_init.up.sql  20231224072955_regions.down.sql  20231224072955_regions.up.sql
src/: main.rs
src/days/: day_00.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  mod.rs
