[package]
name = "cch23-tony"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart"] }
base64 = "0.21.5"
chrono = "0.4.31"
image = "0.24.7"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tokio-util = "0.7.10"
tower = "0.4.13"
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid"] }
ureq = "2.9.1"
uuid = "1.6.1"
