[package]
name = "cch23-tony"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
shuttle-axum = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres"] }
tokio = "1.28.2"
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = "0.4.31"
image = "0.24.7"
serde = "1.0.193"
serde_json = "1.0.108"
tokio-util = "0.7.10"
tower = "0.4.13"
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid"] }
ureq = "2.9.1"
uuid = "1.6.1"
http-body-util = "0.1.0"
http-body = "1.0.0"
